--- a/M'lang.mw
+++ b/M'lang.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato m'lang.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> M'lang, Cotabato  
 | 1990 = 42475		
@@ -13,7 +14,6 @@
 |}}
 Say '''M'lang''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 87,749 totoo. Walay kabaleg tan sukat to ya 312.13 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 9402.	
 	
-
 ==Saray barangay==
 * Bagontapay
 * Bialong
@@ -53,10 +53,14 @@ Say '''M'lang''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]
 * Ugpay
 * Palma-Perez
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}														
+{{Cotabato}}		
+												
 [[Category:Saray baley na Cotabato]]
