--- a/Magpet.mw
+++ b/Magpet.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato magpet.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Magpet, Cotabato  
 | 1990 = 55399		
@@ -13,7 +14,6 @@
 |}}
 Say '''Magpet''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 45,183 totoo. Walay kabaleg tan sukat to ya 755.36 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 9404.	
 		
-
 ==Saray barangay==
 * Alibayon
 * Bagumbayan
@@ -48,10 +48,14 @@ Say '''Magpet''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]
 * Kinarum
 * Manobisa
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}												
+{{Cotabato}}	
+											
 [[Category:Saray baley na Cotabato]]
