--- a/Matalam.mw
+++ b/Matalam.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato matalam.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Matalam, Cotabato  
 | 1990 = 48745		
@@ -13,7 +14,6 @@
 |}}
 Say '''Matalam''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 74,034 totoo. Walay kabaleg tan sukat to ya 476 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 9406.	
 		
-
 ==Saray barangay==
 * New Alimodian
 * Arakan
@@ -50,10 +50,14 @@ Say '''Matalam''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]
 * New Abra
 * Pinamaton
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}													
+{{Cotabato}}		
+											
 [[Category:Saray baley na Cotabato]]
