--- a/Pigcawayan.mw
+++ b/Pigcawayan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato pigkawayan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pigkawayan, Cotabato  
 | 1990 = 51421		
@@ -13,7 +14,6 @@
 |}}
 Say '''Pigkawayan''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 59,975 totoo. Walay kabaleg tan sukat to ya 340.11 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9412.	
 	
-
 ==Saray barangay==
 * Anick (Upper Balogo)
 * Upper Baguer (Baguer)
@@ -57,10 +57,14 @@ Say '''Pigkawayan''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipin
 * Midpapan II
 * Cabpangi
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}													
+{{Cotabato}}	
+												
 [[Category:Saray baley na Cotabato]]
