--- a/Pikit.mw
+++ b/Pikit.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato pikit.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pikit, Cotabato  
 | 1990 = 32774		
@@ -13,7 +14,6 @@
 |}}
 Say '''Pikit''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 113,014 totoo. Walay kabaleg tan sukat to ya 604.61 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 9409.	
 	
-
 ==Saray barangay==
 * Bagoaingud (Bagoinged)
 * Balabak
@@ -57,10 +57,14 @@ Say '''Pikit''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]].
 * Tinutulan
 * Pamalian
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}														
+{{Cotabato}}	
+													
 [[Category:Saray baley na Cotabato]]
