--- a/President_Roxas,_Cotabato.mw
+++ b/President_Roxas,_Cotabato.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato president roxas.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> President Roxas, Cotabato  
 | 1990 = 31412		
@@ -13,7 +14,6 @@
 |}}
 Say '''President Roxas''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 44,229 totoo. Walay kabaleg tan sukat to ya 618.25 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 9405.	
 	
-
 ==Saray barangay==
 * Alegria
 * Bato-bato
@@ -41,10 +41,14 @@ Say '''President Roxas''' et unaan ya klase baley ed luyag na [[Cotabato]], [[Pi
 * Kimaruhing
 * Mabuhay
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}														
+{{Cotabato}}		
+												
 [[Category:Saray baley na Cotabato]]
