--- a/Tulunan.mw
+++ b/Tulunan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator cotabato tulunan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tulunan, Cotabato  
 | 1990 = 54954		
@@ -13,7 +14,6 @@
 |}}
 Say '''Tulunan''' et kumadwa ya klase baley ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 54,884 totoo. Walay kabaleg tan sukat to ya 343.08 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 9403.	
 	
-
 ==Saray barangay==
 * Bagumbayan
 * Banayal
@@ -45,10 +45,14 @@ Say '''Tulunan''' et kumadwa ya klase baley ed luyag na [[Cotabato]], [[Pilipina
 * Genoveva Baynosa
 * Nabundasan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Cotabato}}														
+{{Cotabato}}	
+													
 [[Category:Saray baley na Cotabato]]
