--- a/Kidapawan.mw
+++ b/Kidapawan.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_cotabato_kidapawan.png|right|270px]] 							
-									
+{{Infobox location}}
+												
 Say '''Kidapawan''' et kumatlo ya klase siyudad ed luyag na [[Cotabato]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 125,447 totoo. <br> 	
-Walay kabaleg tan sukat to ya 358.47 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 9400. 			
+Walay kabaleg tan sukat to ya 358.47 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 9400. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Cotabato}}	
 									
 [[Category:Saray siyudad na Filipinas]]
