--- a/Asuncion.mw
+++ b/Asuncion.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del norte asuncion.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Asuncion, Davao del Norte
 | 1990 =		
@@ -13,7 +14,6 @@
 |}}
 
 Say '''Asuncion''' et unaan ya klase baley ed luyag na [[Davao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 55,844 totoo. Walay kabaleg tan sukat to ya 297.39 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8102.	
-
 
 ==Saray barangay==
 * Binancian
@@ -37,10 +37,14 @@ Say '''Asuncion''' et unaan ya klase baley ed luyag na [[Davao del Norte]], [[Pi
 * Sonlon
 * New Loon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Norte}}															
+{{Davao del Norte}}	
+														
 [[Category:Saray baley na Davao del Norte]]
