--- a/Braulio_E._Dujali.mw
+++ b/Braulio_E._Dujali.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del norte braulio e. dujali.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Braulio E. Dujali, Davao del Norte
 | 1990 = 49507		
@@ -13,7 +14,6 @@
 |}}
 Say '''Braulio E. Dujali''' et kumapat ya klase baley ed luyag na [[Davao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 28,339 totoo. Walay kabaleg tan sukat to ya 91 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8100.	
 
-
 ==Saray barangay==
 * Cabay-Angan
 * Dujali
@@ -21,10 +21,14 @@ Say '''Braulio E. Dujali''' et kumapat ya klase baley ed luyag na [[Davao del No
 * New Casay
 * Tanglaw
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Norte}}															
+{{Davao del Norte}}		
+													
 [[Category:Saray baley na Davao del Norte]]
