--- a/Carmen,_Davao_del_Norte.mw
+++ b/Carmen,_Davao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del norte carmen.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Carmen, Davao del Norte
 | 1990 = 66030		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Carmen''' et unaan ya klase baley ed luyag na [[Davao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 69,199 totoo. Walay kabaleg tan sukat to ya 166 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8101.	
-
 
 ==Saray barangay==
 *Alejal
@@ -35,10 +35,14 @@ Say '''Carmen''' et unaan ya klase baley ed luyag na [[Davao del Norte]], [[Pili
 *Tuganay
 *Mabaus
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Norte}}															
+{{Davao del Norte}}	
+														
 [[Category:Saray baley na Davao del Norte]]
