--- a/Kapalong.mw
+++ b/Kapalong.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del norte kapalong.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kapalong, Davao del Norte
 | 1990 =		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Kapalong''' et unaan ya klase baley ed luyag na [[Davao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 68,261 totoo. Walay kabaleg tan sukat to ya 830.01 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8113.	
-
 
 ==Saray barangay==
 *Semong
@@ -30,10 +30,14 @@ Say '''Kapalong''' et unaan ya klase baley ed luyag na [[Davao del Norte]], [[Pi
 *Sua-on
 *Tiburcia
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Norte}}															
+{{Davao del Norte}}	
+														
 [[Category:Saray baley na Davao del Norte]]
