--- a/San_Isidro,_Davao_del_Norte.mw
+++ b/San_Isidro,_Davao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del norte san isidro.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Isidro, Davao del Norte
 | 1990 =		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Isidro''' et kumapat ya klase baley ed luyag na [[Davao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 25,548 totoo. Walay kabaleg tan sukat to ya 152.49 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8100.	
 	
-
 ==Saray barangay==
 * Dacudao
 * Datu Balong
@@ -29,10 +29,14 @@ Say '''San Isidro''' et kumapat ya klase baley ed luyag na [[Davao del Norte]], 
 * Santo Niño
 * Sawata
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Norte}}														
+{{Davao del Norte}}	
+													
 [[Category:Saray baley na Davao del Norte]]
