--- a/Santo_Tomas,_Davao_del_Norte.mw
+++ b/Santo_Tomas,_Davao_del_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del norte santo tomas.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santo Tomas, Davao del Norte
 | 1990 = 67916		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Santo Tomas''' et unaan ya klase baley ed luyag na [[Davao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 109,269 totoo. Walay kabaleg tan sukat to ya 221.8 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8112.	
-
 
 ==Saray barangay==
 * Balagunan
@@ -35,10 +35,14 @@ Say '''Santo Tomas''' et unaan ya klase baley ed luyag na [[Davao del Norte]], [
 * San Vicente
 * Tulalian
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Norte}}															
+{{Davao del Norte}}	
+														
 [[Category:Saray baley na Davao del Norte]]
