--- a/Talaingod.mw
+++ b/Talaingod.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del norte talaingod.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talaingod, Davao del Norte
 | 1990 =		
@@ -13,17 +14,20 @@
 |}}
 Say '''Talaingod''' et kumadwa ya klase baley ed luyag na [[Davao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 25,566 totoo. Walay kabaleg tan sukat to ya 656.83 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8100.	
 	
-
 ==Saray barangay==
 
 * Dagohoy
 * Palma Gil
 * Santo Niño
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Norte}}														
+{{Davao del Norte}}		
+												
 [[Category:Saray baley na Davao del Norte]]
