--- a/Panabo.mw
+++ b/Panabo.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_davao_del_norte_panabo.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Panabo''' et kumatlo ya klase siyudad ed luyag na [[Davao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 174,364 totoo. <br> 	
-Walay kabaleg tan sukat to ya 251.23 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8105. 			
+Walay kabaleg tan sukat to ya 251.23 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8105. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Davao del Norte}}	
 									
 [[Category:Saray siyudad na Filipinas]]
