--- a/Samal.mw
+++ b/Samal.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_davao_del_norte_samal.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Samal, Davao del Norte''' et kumapat ya klase siyudad ed luyag na [[Davao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 95,874 totoo. <br> 	
-Walay kabaleg tan sukat to ya 301.30 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8119. 			
+Walay kabaleg tan sukat to ya 301.30 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8119. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Davao del Norte}}	
 									
 [[Category:Saray siyudad na Filipinas]]
