--- a/Tagum.mw
+++ b/Tagum.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_davao_del_norte_tagum.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Tagum''' et unaan ya klase siyudad ed luyag na [[Davao del Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 242,801 totoo. <br> 	
-Walay kabaleg tan sukat to ya 195.80 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 8100. 			
+Walay kabaleg tan sukat to ya 195.80 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 8100. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Davao del Norte}}	
 									
 [[Category:Saray siyudad na Filipinas]]
