--- a/Bansalan.mw
+++ b/Bansalan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del sur bansalan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bansalan, Davao del Sur
 | 1990 = 46691		
@@ -14,7 +15,6 @@
 
 Say '''Bansalan''' et unaan ya klase baley ed luyag na [[Davao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 56,496 totoo. Walay kabaleg tan sukat to ya 157.75 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8005.	
 	
-
 ==Saray barangay==
 * Alegre
 * Alta Vista
@@ -42,10 +42,14 @@ Say '''Bansalan''' et unaan ya klase baley ed luyag na [[Davao del Sur]], [[Pili
 * Union
 * Poblacion Dos
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Sur}}														
+{{Davao del Sur}}	
+													
 [[Category:Saray baley na Davao del Sur]]
