--- a/Magsaysay,_Davao_del_Sur.mw
+++ b/Magsaysay,_Davao_del_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del sur magsaysay.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Magsaysay, Davao del Sur
 | 1990 = 38531		
@@ -13,7 +14,6 @@
 |}}
 Say '''Magsaysay''' et kumatlo ya klase baley ed luyag na [[Davao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 49,141 totoo. Walay kabaleg tan sukat to ya 268.09 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8004.	
 	
-
 ==Saray barangay==
 * Bacungan
 * Balnate
@@ -38,10 +38,14 @@ Say '''Magsaysay''' et kumatlo ya klase baley ed luyag na [[Davao del Sur]], [[P
 * Maibo
 * New Opon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Sur}}														
+{{Davao del Sur}}	
+													
 [[Category:Saray baley na Davao del Sur]]
