--- a/Malalag.mw
+++ b/Malalag.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del sur malalag.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malalag, Davao del Sur
 | 1990 = 27709		
@@ -13,7 +14,6 @@
 |}}
 Say '''Malalag''' et kumadwa ya klase baley ed luyag na [[Davao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 35,295 totoo. Walay kabaleg tan sukat to ya 186.12 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8010.	
 	
-
 ==Saray barangay==
 * Baybay
 * Bolton
@@ -31,10 +31,14 @@ Say '''Malalag''' et kumadwa ya klase baley ed luyag na [[Davao del Sur]], [[Pil
 * Rizal (Parame)
 * San Isidro
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Sur}}														
+{{Davao del Sur}}	
+													
 [[Category:Saray baley na Davao del Sur]]
