--- a/Matanao.mw
+++ b/Matanao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del sur matanao.png|right|270px]]		
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Matanao, Davao del Sur
 | 1990 = 41262		
@@ -13,7 +14,6 @@
 |}}
 Say '''Matanao''' et kumadwa ya klase baley ed luyag na [[Davao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 51,382 totoo. Walay kabaleg tan sukat to ya 202.4 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8003.	
 	
-
 ==Saray barangay==
 * Asbang
 * Asinan
@@ -49,10 +49,14 @@ Say '''Matanao''' et kumadwa ya klase baley ed luyag na [[Davao del Sur]], [[Pil
 * Towak
 * Tibongbong
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Sur}}														
+{{Davao del Sur}}	
+													
 [[Category:Saray baley na Davao del Sur]]
