--- a/Padada.mw
+++ b/Padada.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del sur padada.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Padada, Davao del Sur
 | 1990 = 21051		
@@ -13,7 +14,6 @@
 |}}
 Say '''Padada''' et kumatlo ya klase baley ed luyag na [[Davao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 25,724 totoo. Walay kabaleg tan sukat to ya 83 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8007.	
 	
-
 ==Saray barangay==
 * Almendras (Pob.)
 * Don Sergio Osmeña, Sr
@@ -33,10 +33,14 @@ Say '''Padada''' et kumatlo ya klase baley ed luyag na [[Davao del Sur]], [[Pili
 * Upper Limonzo
 * Upper Malinao
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Sur}}														
+{{Davao del Sur}}	
+													
 [[Category:Saray baley na Davao del Sur]]
