--- a/Santa_Cruz,_Davao_del_Sur.mw
+++ b/Santa_Cruz,_Davao_del_Sur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del sur santa cruz.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Cruz, Davao del Sur
 | 1990 = 55951		
@@ -34,10 +35,14 @@ Say '''Santa Cruz''' et unaan ya klase baley ed luyag na [[Davao del Sur]], [[Pi
 * Zone III (Pob.)
 * Zone IV (Pob.)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Sur}}														
+{{Davao del Sur}}	
+													
 [[Category:Saray baley na Davao del Sur]]
