--- a/Sulop.mw
+++ b/Sulop.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao del sur sulop.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sulop, Davao del Sur
 | 1990 = 24513		
@@ -13,7 +14,6 @@
 |}}
 Say '''Sulop''' et kumatlo ya klase baley ed luyag na [[Davao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 32,163 totoo. Walay kabaleg tan sukat to ya 155.26 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8009.	
 	
-
 ==Saray barangay==
 * Balasinon
 * Buguis
@@ -41,10 +41,14 @@ Say '''Sulop''' et kumatlo ya klase baley ed luyag na [[Davao del Sur]], [[Pilip
 * Tanwalang
 * Waterfall
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao del Sur}}														
+{{Davao del Sur}}		
+												
 [[Category:Saray baley na Davao del Sur]]
