--- a/Digos.mw
+++ b/Digos.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_davao_del_sur_digos.png|right|270px]] 							
-									
+{{Infobox location}}
+													
 Say '''Digos''' et kumadwa ya klase siyudad ed luyag na [[Davao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 149,891 totoo. <br> 	
-Walay kabaleg tan sukat to ya 287.10 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 8002. 			
-									
+Walay kabaleg tan sukat to ya 287.10 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 8002.
+
+== Saray reperensiya ==
+{{Reflist}} 
+
+{{Davao del Sur}}
+										
 [[Category:Saray siyudad na Filipinas]]
