--- a/Siyudad_na_Davao.mw
+++ b/Siyudad_na_Davao.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_davao_del_sur_davao.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Siyudad na Davao''' et unaan ya klase siyudad ed luyag na [[Davao del Sur]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 1,449,296 totoo. <br> 	
-Walay kabaleg tan sukat to ya 2,443.61 sq. km. Sikato et walad  unaan ag kumatlo ya distrito. Say zip code to et 8000. 			
+Walay kabaleg tan sukat to ya 2,443.61 sq. km. Sikato et walad  unaan ag kumatlo ya distrito. Say zip code to et 8000. 		
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Davao del Sur}}
 									
 [[Category:Saray siyudad na Filipinas]]
