--- a/Don_Marcelino.mw
+++ b/Don_Marcelino.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao occidental don marcelino.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Don Marcelino, Davao Occidental
 | 1990 = 27100		
@@ -13,7 +14,6 @@
 |}}
 Say '''Don Marcelino''' et kumatlo ya klase baley ed luyag na [[Davao Occidental|Davao Occidental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 41,942 totoo. Walay kabaleg tan sukat to ya 407.3 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8013.	
 	
-
 ==Saray barangay==
 * Calian
 * Kiobog
@@ -31,10 +31,14 @@ Say '''Don Marcelino''' et kumatlo ya klase baley ed luyag na [[Davao Occidental
 * South Lamidan
 * West Lamidan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Occidental}}														
+{{Davao Occidental}}	
+													
 [[Category:Saray baley na Davao Occidental]]
