--- a/Jose_Abad_Santos.mw
+++ b/Jose_Abad_Santos.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao occidental jose abad santos.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jose Abad Santos, Davao Occidental
 | 1990 = 44504		
@@ -13,7 +14,6 @@
 |}}
 Say '''Jose Abad Santos''' et unaan ya klase baley ed luyag na [[Davao Occidental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 69,631 totoo. Walay kabaleg tan sukat to ya 600.06 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8014.	
 		
-
 ==Saray barangay==
 * Buguis
 * Balangonan
@@ -42,10 +42,14 @@ Say '''Jose Abad Santos''' et unaan ya klase baley ed luyag na [[Davao Occidenta
 * Tabayon
 * Tanuman
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Occidental}}													
+{{Davao Occidental}}	
+												
 [[Category:Saray baley na Davao Occidental]]
