--- a/Malita.mw
+++ b/Malita.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao occidental malita.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malita, Davao Occidental
 | 1990 = 82786		
@@ -13,7 +14,6 @@
 |}}
 Say '''Malita''' et unaan ya klase baley ed luyag na [[Davao Occidental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 109,568 totoo. Walay kabaleg tan sukat to ya 883.37 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8012.	
 		
-
 ==Saray barangay==
 * Bito
 * Bolila
@@ -46,10 +46,14 @@ Say '''Malita''' et unaan ya klase baley ed luyag na [[Davao Occidental]], [[Pil
 * Tubalan
 * Pangaleon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Occidental}}													
+{{Davao Occidental}}	
+												
 [[Category:Saray baley na Davao Occidental]]
