--- a/Santa_Maria,_Davao_Occidental.mw
+++ b/Santa_Maria,_Davao_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao occidental santa maria.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Maria, Davao Occidental
 | 1990 = 40036		
@@ -13,7 +14,6 @@
 |}}
 Say '''Santa Maria''' et kumadwa ya klase baley ed luyag na [[Davao Occidental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 49,349 totoo. Walay kabaleg tan sukat to ya 175 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8011.	
 		
-
 ==Saray barangay==
 * Basiawan
 * Buca
@@ -38,10 +38,14 @@ Say '''Santa Maria''' et kumadwa ya klase baley ed luyag na [[Davao Occidental]]
 * Datu Intan
 * Kinilidan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Occidental}}													
+{{Davao Occidental}}	
+												
 [[Category:Saray baley na Davao Occidental]]
