--- a/Sarangani,_Davao_Occidental.mw
+++ b/Sarangani,_Davao_Occidental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao occidental sarangani.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sarangani, Davao Occidental
 | 1990 = 15003		
@@ -13,7 +14,6 @@
 |}}
 Say '''Sarangani''' et kumapat ya klase baley ed luyag na [[Davao Occidental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 23,290 totoo. Walay kabaleg tan sukat to ya 97.72 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8015.	
 			
-
 ==Saray barangay==
 * Batuganding
 * Konel
@@ -28,10 +28,14 @@ Say '''Sarangani''' et kumapat ya klase baley ed luyag na [[Davao Occidental]], 
 * Tagen
 * Tucal
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Occidental}}												
+{{Davao Occidental}}		
+										
 [[Category:Saray baley na Davao Occidental]]
