--- a/Banaybanay.mw
+++ b/Banaybanay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao oriental banaybanay.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Banaybanay, Davao Oriental
 | 1990 = 29606		
@@ -13,7 +14,6 @@
 |}}
 Say '''Banaybanay''' et kumadwa ya klase baley ed luyag na [[Davao Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 39,121 totoo. Walay kabaleg tan sukat to ya 408.52 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8208.	
 		
-
 ==Saray barangay==
 * Cabangcalan
 * Caganganan
@@ -30,10 +30,14 @@ Say '''Banaybanay''' et kumadwa ya klase baley ed luyag na [[Davao Oriental]], [
 * San Vicente
 * Rang-ay
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Oriental}}													
+{{Davao Oriental}}	
+												
 [[Category:Saray baley na Davao Oriental]]
