--- a/Boston.mw
+++ b/Boston.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao oriental boston.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Boston, Davao Oriental
 | 1990 = 9917		
@@ -13,7 +14,6 @@
 |}}
 Say '''Boston''' et kumatlo ya klase baley ed luyag na [[Davao Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 12,670 totoo. Walay kabaleg tan sukat to ya 357.03 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8206.	
 	
-
 ==Saray barangay==
 * Cabasagan
 * Caatihan
@@ -24,10 +24,14 @@ Say '''Boston''' et kumatlo ya klase baley ed luyag na [[Davao Oriental]], [[Pil
 * Carmen
 * Simulao
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Oriental}}														
+{{Davao Oriental}}	
+													
 [[Category:Saray baley na Davao Oriental]]
