--- a/Governor_Generoso.mw
+++ b/Governor_Generoso.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao oriental governor generoso.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Governor Generoso, Davao Oriental
 | 1990 = 39857		
@@ -13,7 +14,6 @@
 |}}
 Say '''Governor Generoso''' et kumadwa ya klase baley ed luyag na [[Davao Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 50,372 totoo. Walay kabaleg tan sukat to ya 365.75 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8210.	
 	
-
 ==Saray barangay==
 * Anitap
 * Manuel Roxas
@@ -36,10 +36,14 @@ Say '''Governor Generoso''' et kumadwa ya klase baley ed luyag na [[Davao Orient
 * Upper Tibanban
 * Crispin Dela Cruz
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Oriental}}														
+{{Davao Oriental}}	
+													
 [[Category:Saray baley na Davao Oriental]]
