--- a/Lupon.mw
+++ b/Lupon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao oriental lupon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lupon, Davao Oriental
 | 1990 = 47946		
@@ -13,7 +14,6 @@
 |}}
 Say '''Lupon''' et unaan ya klase baley ed luyag na [[Davao Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 61,723 totoo. Walay kabaleg tan sukat to ya 886.39 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8207.	
 	
-
 ==Saray barangay==
 * Bagumbayan
 * Cabadiangan
@@ -37,10 +37,14 @@ Say '''Lupon''' et unaan ya klase baley ed luyag na [[Davao Oriental]], [[Pilipi
 * Tagboa
 * Tagugpo
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Oriental}}														
+{{Davao Oriental}}	
+													
 [[Category:Saray baley na Davao Oriental]]
