--- a/Manay.mw
+++ b/Manay.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao oriental manay.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Manay, Davao Oriental
 | 1990 = 33686		
@@ -13,7 +14,6 @@
 |}}
 Say '''Manay''' et kumadwa ya klase baley ed luyag na [[Davao Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 40,577 totoo. Walay kabaleg tan sukat to ya 418.36 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8202.	
 	
-
 ==Saray barangay==
 * Capasnan
 * Cayawan
@@ -33,10 +33,14 @@ Say '''Manay''' et kumadwa ya klase baley ed luyag na [[Davao Oriental]], [[Pili
 * Zaragosa
 * Lambog
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Oriental}}														
+{{Davao Oriental}}	
+													
 [[Category:Saray baley na Davao Oriental]]
