--- a/San_Isidro,_Davao_Oriental.mw
+++ b/San_Isidro,_Davao_Oriental.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao oriental san isidro.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Isidro, Davao Oriental
 | 1990 = 28936		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Isidro''' et kumapat ya klase baley ed luyag na [[Davao Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 32,424 totoo. Walay kabaleg tan sukat to ya 220.44 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 8209.	
 	
-
 ==Saray barangay==
 * Baon
 * Bitaogan
@@ -32,10 +32,14 @@ Say '''San Isidro''' et kumapat ya klase baley ed luyag na [[Davao Oriental]], [
 * Sudlon
 * Talisay
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Oriental}}														
+{{Davao Oriental}}	
+													
 [[Category:Saray baley na Davao Oriental]]
