--- a/Tarragona.mw
+++ b/Tarragona.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator davao oriental tarragona.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tarragona, Davao Oriental
 | 1990 = 18495		
@@ -13,7 +14,6 @@
 |}}
 Say '''Tarragona''' et kumatlo ya klase baley ed luyag na [[Davao Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 25,671 totoo. Walay kabaleg tan sukat to ya 300.76 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8201.	
 	
-
 ==Saray barangay==
 * Cabagayan
 * Central (Pob.)
@@ -26,10 +26,14 @@ Say '''Tarragona''' et kumatlo ya klase baley ed luyag na [[Davao Oriental]], [[
 * Tomoaong
 * Tubaon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Davao Oriental}}														
+{{Davao Oriental}}	
+													
 [[Category:Saray baley na Davao Oriental]]
