--- a/Mati.mw
+++ b/Mati.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_davao_oriental_mati.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Mati''' et kumanem ya klase siyudad ed luyag na [[Davao Oriental]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 126,143 totoo. <br> 	
-Walay kabaleg tan sukat to ya 588.63 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8200. 			
+Walay kabaleg tan sukat to ya 588.63 sq. km. Sikato et walad  kumadwa ya distrito. Say zip code to et 8200. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Davao Oriental}}	
 									
 [[Category:Saray siyudad na Filipinas]]
