--- a/Basilisa.mw
+++ b/Basilisa.mw
@@ -1,4 +1,5 @@
-[[File:PH locator map dinagat islands basilisa.svg|270px|right]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Basilisa, Dinagat Islands
 | 1990 = 20953		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Basilisa''' et kumapat ya klase baley ed luyag na [[Dinagat Islands]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 33,880 totoo. Walay kabaleg tan sukat to ya 92.68 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 8413.	
-
 
 ==Saray barangay==
 * Benglen 
@@ -43,10 +43,14 @@ Say '''Basilisa''' et kumapat ya klase baley ed luyag na [[Dinagat Islands]], [[
 * Villa Ecleo 
 * Villa Pantinople
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Dinagat Islands}}															
+{{Dinagat Islands}}	
+														
 [[Category:Saray baley na Dinagat Islands]]
