--- a/Cagdianao.mw
+++ b/Cagdianao.mw
@@ -1,4 +1,5 @@
-[[File:PH locator map dinagat islands cagdianao.svg|270px|right]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cagdianao, Dinagat Islands
 | 1990 = 11555		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Cagdianao''' et kumatlo ya klase baley ed luyag na [[Dinagat Islands]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 15,047 totoo. Walay kabaleg tan sukat to ya 249.48 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 8411.	
-
 
 ==Saray barangay==
 * Boa  
@@ -30,10 +30,14 @@ Say '''Cagdianao''' et kumatlo ya klase baley ed luyag na [[Dinagat Islands]], [
 * Tigbao 
 * Valencia
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Dinagat Islands}}															
+{{Dinagat Islands}}		
+													
 [[Category:Saray baley na Dinagat Islands]]
