--- a/Dinagat,_Dinagat_Islands.mw
+++ b/Dinagat,_Dinagat_Islands.mw
@@ -1,4 +1,5 @@
-[[File:PH locator map dinagat islands dinagat.svg|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dinagat, Dinagat Islands
 | 1990 = 8659		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Dinagat''' et kumalima ya klase baley ed luyag na [[Dinagat Islands]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 12,786 totoo. Walay kabaleg tan sukat to ya 139.94 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 8412.	
-
 
 ==Saray barangay==
 * Bagumbayan 
@@ -28,10 +28,14 @@ Say '''Dinagat''' et kumalima ya klase baley ed luyag na [[Dinagat Islands]], [[
 * Wadas 
 * White Beach (Pob.)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Dinagat Islands}}															
+{{Dinagat Islands}}	
+														
 [[Category:Saray baley na Dinagat Islands]]
