--- a/Libjo.mw
+++ b/Libjo.mw
@@ -1,4 +1,5 @@
-[[File:PH locator map dinagat islands libjo.svg|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Libjo, Dinagat Islands
 | 1990 = 14170		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Libjo''' et kumalima ya klase baley ed luyag na [[Dinagat Islands]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 17,567 totoo. Walay kabaleg tan sukat to ya 180.57 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 8414.	
-
 
 ==Saray barangay==
 * Albor (Pob.)  
@@ -32,10 +32,14 @@ Say '''Libjo''' et kumalima ya klase baley ed luyag na [[Dinagat Islands]], [[Pi
 * San Jose 
 * Santo Niño 
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Dinagat Islands}}															
+{{Dinagat Islands}}	
+														
 [[Category:Saray baley na Dinagat Islands]]
