--- a/Loreto,_Saray_isla_ed_Dinagât.mw
+++ b/Loreto,_Saray_isla_ed_Dinagât.mw
@@ -1,4 +1,5 @@
-[[File:PH locator map dinagat islands loreto.svg|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Loreto, Dinagat Islands
 | 1990 = 7340		
@@ -13,7 +14,6 @@
 |}}
 Say '''Loreto''' et kumapat ya klase baley ed luyag na [[Dinagat Islands]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 8,920 totoo. Walay kabaleg tan sukat to ya 255.87 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 8415.	
 
-
 ==Saray barangay==
 * Carmen (Pob.)  
 * Esperanza 
@@ -26,10 +26,14 @@ Say '''Loreto''' et kumapat ya klase baley ed luyag na [[Dinagat Islands]], [[Pi
 * Santa Cruz (Pob.) 
 * Santiago (Pob.)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Dinagat Islands}}															
+{{Dinagat Islands}}	
+														
 [[Category:Saray baley na Dinagat Islands]]
