--- a/San_Jose,_Dinagat_Islands.mw
+++ b/San_Jose,_Dinagat_Islands.mw
@@ -1,4 +1,5 @@
-[[File:PH locator map dinagat islands san jose.svg|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Jose, Dinagat Islands
 | 1990 = 30405		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}	
 Say '''San Jose''' et kumapat ya klase baley ed luyag na [[Dinagat Islands]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 31,035 totoo. Walay kabaleg tan sukat to ya 27.8 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 8427.	
-
 
 ==Saray barangay==
 * Aurelio
@@ -28,10 +28,14 @@ Say '''San Jose''' et kumapat ya klase baley ed luyag na [[Dinagat Islands]], [[
 * Santa Cruz
 * Wilson
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Dinagat Islands}}															
+{{Dinagat Islands}}	
+														
 [[Category:Saray baley na Dinagat Islands]]
