--- a/Tubajon.mw
+++ b/Tubajon.mw
@@ -1,4 +1,5 @@
-[[File:PH locator map dinagat islands tubajon.svg|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tubajon, Dinagat Islands
 | 1990 = 5783		
@@ -13,7 +14,6 @@
 |}}
 Say '''Tubajon''' et kumalima ya klase baley ed luyag na [[Dinagat Islands]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 7,568 totoo. Walay kabaleg tan sukat to ya 90 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 8426.	
 	
-
 ==Saray barangay==
 * Diaz (Romualdez) 
 * Imelda  
@@ -25,10 +25,14 @@ Say '''Tubajon''' et kumalima ya klase baley ed luyag na [[Dinagat Islands]], [[
 * San Vicente(Pob)
 * Santa Cruz
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Dinagat Islands}}														
+{{Dinagat Islands}}	
+													
 [[Category:Saray baley na Dinagat Islands]]
