--- a/Arteche.mw
+++ b/Arteche.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar arteche.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Arteche, Eastern Samar
 | 1990 = 11245		
@@ -14,7 +15,6 @@
 	
 Say '''Arteche''' et kumatlo ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 15,164 totoo. Walay kabaleg tan sukat to ya 169.82 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6822.	
 	
-
 ==Saray barangay==
 * Aguinaldo
 * Balud (Pob.)
@@ -37,10 +37,14 @@ Say '''Arteche''' et kumatlo ya klase baley ed luyag na [[Eastern Samar]], [[Pil
 * Tawagan
 * Tebalawon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}		
+												
 [[Category:Saray baley na Eastern Samar]]
