--- a/Balangkayan.mw
+++ b/Balangkayan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar balangkayan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Balangkayan, Eastern Samar
 | 1990 = 7609		
@@ -13,7 +14,6 @@
 |}}
 Say '''Balangkayan''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 9,046 totoo. Walay kabaleg tan sukat to ya 207.05 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6801.	
 	
-
 ==Saray barangay==
 * Balogo
 * Bangon
@@ -31,10 +31,14 @@ Say '''Balangkayan''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], 
 * Poblacion IV
 * Poblacion V
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
