--- a/Can-avid.mw
+++ b/Can-avid.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar can-avid.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Can-avid, Eastern Samar
 | 1990 = 13254		
@@ -13,7 +14,6 @@
 |}}
 Say '''Can-avid''' et kumapat ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 19,785 totoo. Walay kabaleg tan sukat to ya 288.7 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6806.	
 	
-
 ==Saray barangay==
 * Balagon
 * Baruk
@@ -44,10 +44,14 @@ Say '''Can-avid''' et kumapat ya klase baley ed luyag na [[Eastern Samar]], [[Pi
 * Solong
 * Rawis
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}		
+												
 [[Category:Saray baley na Eastern Samar]]
