--- a/Dolores,_Eastern_Samar.mw
+++ b/Dolores,_Eastern_Samar.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar dolores.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Dolores, Eastern Samar
 | 1990 = 30570		
@@ -13,7 +14,6 @@
 |}}
 Say '''Dolores''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 37,912 totoo. Walay kabaleg tan sukat to ya 308.58 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6817.	
 	
-
 ==Saray barangay==
 * Aroganga
 * Magongbong
@@ -62,10 +62,14 @@ Say '''Dolores''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pi
 * Malaintos
 * Tikling
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
