--- a/General_MacArthur.mw
+++ b/General_MacArthur.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar general macarthur.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> General MacArthur, Eastern Samar
 | 1990 = 9627		
@@ -14,7 +15,6 @@
 	
 Say '''General MacArthur''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 12,214 totoo. Walay kabaleg tan sukat to ya 117.29 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6805.	
 	
-
 ==Saray barangay==
 * Alang-alang
 * Binalay
@@ -47,10 +47,14 @@ Say '''General MacArthur''' et kumalima ya klase baley ed luyag na [[Eastern Sam
 * Quezon
 * Tandang Sora
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
