--- a/Giporlos.mw
+++ b/Giporlos.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar giporlos.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Giporlos, Eastern Samar
 | 1990 = 11001		
@@ -13,7 +14,6 @@
 |}}
 Say '''Giporlos''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 12,040 totoo. Walay kabaleg tan sukat to ya 97.51 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6811.	
 	
-
 ==Saray barangay==
 * Barangay 1 (Pob.)
 * Barangay 2 (Pob.)
@@ -34,10 +34,14 @@ Say '''Giporlos''' et kumalima ya klase baley ed luyag na [[Eastern Samar]], [[P
 * Santa Cruz (Cansingkol)
 * San Isidro (Malabag)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
