--- a/Template:Eastern_Samar.mw
+++ b/Template:Eastern_Samar.mw
@@ -18,7 +18,7 @@
 * [[Lawaan, Eastern Samar|Lawaan]]
 * [[Llorente, Eastern Samar|Llorente]]
 * [[Maslog, Eastern Samar|Maslog]]
-* [[Maydolong, Eastern Samar|Maydolong]]
+* [[Maydolong]]
 * [[Mercedes, Eastern Samar|Mercedes]]
 * [[Oras, Eastern Samar|Oras]]
 * [[Quinapondan, Eastern Samar|Quinapondan]]
