--- a/Oras.mw
+++ b/Oras.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar oras.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Oras, Eastern Samar
 | 1990 = 26978		
@@ -13,7 +14,6 @@
 |}}
 Say '''Oras''' et kumapat ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 34,760 totoo. Walay kabaleg tan sukat to ya 188.7 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6818.	
 	
-
 ==Saray barangay==
 * Agsam
 * Bagacay
@@ -57,12 +57,15 @@ Say '''Oras''' et kumapat ya klase baley ed luyag na [[Eastern Samar]], [[Pilipi
 * Trinidad (Maycorot)
 * Alang-alang
 * San Roque (Pob.)
-}}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
