--- a/Taft.mw
+++ b/Taft.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator eastern samar taft.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Taft, Eastern Samar
 | 1990 = 13449		
@@ -13,7 +14,6 @@
 |}}
 Say '''Taft''' et kumapat ya klase baley ed luyag na [[Eastern Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 17,183 totoo. Walay kabaleg tan sukat to ya 231.27 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6816.	
 	
-
 ==Saray barangay==
 * Batiawan
 * Beto
@@ -40,10 +40,14 @@ Say '''Taft''' et kumapat ya klase baley ed luyag na [[Eastern Samar]], [[Pilipi
 * San Pablo
 * San Rafael
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Eastern Samar}}														
+{{Eastern Samar}}	
+													
 [[Category:Saray baley na Eastern Samar]]
