--- a/Nueva_Valencia.mw
+++ b/Nueva_Valencia.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator guimaras nueva valencia.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Nueva Valencia, Guimaras
 | 1990 = 30703		
@@ -13,7 +14,6 @@
 |}}
 Say '''Nueva Valencia''' et kumatlo ya klase baley ed luyag na [[Guimaras]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 37,852 totoo. Walay kabaleg tan sukat to ya 137.12 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 5046.	
 		
-
 ==Saray barangay==
 * Cabalagnan 	
 * Calaya 	
@@ -38,11 +38,14 @@ Say '''Nueva Valencia''' et kumatlo ya klase baley ed luyag na [[Guimaras]], [[P
 * Santo Domingo 	
 * Tando 	
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Guimaras}}													
+{{Guimaras}}	
+												
 [[Category:Saray baley na Guimaras]]
