--- a/Aguinaldo.mw
+++ b/Aguinaldo.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_ifugao_aguinaldo.png|right|Mapa na Ifugao ya nanengneng so location na Aguinaldo]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Aguinaldo, Ifugao
 | 1990 = 19830		
@@ -38,6 +39,9 @@ Say Aguinaldo walay 16 ya [[barangay]].
 * Ubao
 * Buwag
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
