--- a/Alfonso_Lista.mw
+++ b/Alfonso_Lista.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_ifugao_alfonso lista.png|right|Mapa na Ifugao ya nanengneng so location na Alfonso Lista]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Alfonso Lista, Ifugao
 | 1990 = 14816		
@@ -42,6 +43,9 @@ Say Alfonso Lista walay 20 ya [[barangay]].
 * Ngileb
 * Laya
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
