--- a/Banaue.mw
+++ b/Banaue.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_ifugao_banaue.png|right|Mapa na Ifugao ya nanengneng so location na Banaue]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Banaue, Ifugao
 | 1990 = 16943		
@@ -41,6 +42,9 @@ Say Banaue walay 18 ya [[barangay]].
 * View Point
 * Pula
 |}
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
