--- a/Hungduan.mw
+++ b/Hungduan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_ifugao_hungduan.png|right|Mapa na Ifugao ya nanengneng so location na Hungduan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Hungduan, Ifugao
 | 1990 = 7254		
@@ -27,11 +28,13 @@ Say Hungduan walay 9 ya [[barangay]].
 * Nungulunan
 * Ba-ang
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Ifugao}}
-
 
 [[Category:Saray baley na Ifugao]]
