--- a/Lagawe.mw
+++ b/Lagawe.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_ifugao_lagawe.png|right|Mapa na Ifugao ya nanengneng so location na Lagawe]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lagawe, Ifugao
 | 1990 = 12437		
@@ -41,6 +42,9 @@ Say Lagawe walay 20 ya [[barangay]].
 * Poblacion North
 * Poblacion West
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
