--- a/Lamut.mw
+++ b/Lamut.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_ifugao_lamut.png|right|Mapa na Ifugao ya nanengneng so location na Lamut]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lamut, Ifugao
 | 1990 = 14101		
@@ -39,6 +40,9 @@ Say Lamut walay 18 ya [[barangay]].
 * Sanafe
 * Umilag
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
