--- a/Mayoyao.mw
+++ b/Mayoyao.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_ifugao_mayoyao.png|right|Mapa na Ifugao ya nanengneng so location na Mayoyao]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mayoyao, Ifugao
 | 1990 = 23942		
@@ -48,6 +49,9 @@ Say Mayoyao walay 27 ya [[barangay]].
 * Bato-Alatbang
 * Epeng
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
