--- a/Tinoc.mw
+++ b/Tinoc.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_ifugao_tinoc.png|right|Mapa na Ifugao ya nanengneng so location na Tinoc]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tinoc, Ifugao
 | 1990 = 8256		
