--- a/Tinoc.mw
+++ b/Tinoc.mw
@@ -31,6 +31,9 @@ Say Tinoc walay 12 ya [[barangay]].
 * Tulludan
 * Wangwang
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray nipaway ya kawing==
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
