--- a/Santa_Maria,_Ilocos_Sur.mw
+++ b/Santa_Maria,_Ilocos_Sur.mw
@@ -66,4 +66,4 @@ Say Santa Maria walay 33 ya barangay.
 
 {{Ilocos Sur}}
 
-[[Category:Baley ya Ilocos Sur]]
+[[Category:Saray baley na Ilocos Sur]]
