--- a/Magsingal.mw
+++ b/Magsingal.mw
@@ -61,3 +61,5 @@ Say Magsingal walay 30 ya [[barangay]].
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 
 {{Ilocos Sur}}
+
+[[Category:Saray baley na Ilocos Sur]]
