--- a/Template:Iloilo.mw
+++ b/Template:Iloilo.mw
@@ -34,7 +34,7 @@
 * [[Miagao, Iloilo|Miagao]]
 * [[Mina, Iloilo|Mina]]
 * [[New Lucena, Iloilo|New Lucena]]
-* [[Oton, Iloilo|Oton]]
+* [[Oton]]
 * [[Pavia, Iloilo|Pavia]]
 * [[Pototan, Iloilo|Pototan]]
 * [[San Dionisio, Iloilo|San Dionisio]]
