--- a/Template:Iloilo.mw
+++ b/Template:Iloilo.mw
@@ -44,7 +44,7 @@
 * [[San Rafael, Iloilo|San Rafael]]
 * [[Santa Barbara, Iloilo|Santa Barbara]]
 * [[Sara, Iloilo|Sara]]
-* [[Tigbauan, Iloilo|Tigbauan]]
+* [[Tigbauan]]
 * [[Tubungan, Iloilo|Tubungan]]
 * [[Zarraga, Iloilo|Zarraga]]
 |group2 = Saray siyudad
