--- a/Template:Isabela.mw
+++ b/Template:Isabela.mw
@@ -14,7 +14,7 @@
 * [[Cabatuan, Isabela|Cabatuan]]
 * [[Cordon, Isabela|Cordon]]
 * [[Delfin Albano, Isabela|Delfin Albano]]
-* [[Dinapigue, Isabela|Dinapigue]]
+* [[Dinapigue]]
 * [[Divilacan, Isabela|Divilacan]]
 * [[Echague, Isabela|Echague]]
 * [[Gamu, Isabela|Gamu]]
