--- a/Template:Isabela.mw
+++ b/Template:Isabela.mw
@@ -15,7 +15,7 @@
 * [[Cordon, Isabela|Cordon]]
 * [[Delfin Albano, Isabela|Delfin Albano]]
 * [[Dinapigue]]
-* [[Divilacan, Isabela|Divilacan]]
+* [[Divilacan]]
 * [[Echague, Isabela|Echague]]
 * [[Gamu, Isabela|Gamu]]
 * [[Jones, Isabela|Jones]]
