--- a/Template:Isabela.mw
+++ b/Template:Isabela.mw
@@ -16,7 +16,7 @@
 * [[Delfin Albano, Isabela|Delfin Albano]]
 * [[Dinapigue]]
 * [[Divilacan]]
-* [[Echague, Isabela|Echague]]
+* [[Echague]]
 * [[Gamu, Isabela|Gamu]]
 * [[Jones, Isabela|Jones]]
 * [[Luna, Isabela|Luna]]
