--- a/Template:Isabela.mw
+++ b/Template:Isabela.mw
@@ -20,7 +20,7 @@
 * [[Gamu, Isabela|Gamu]]
 * [[Jones, Isabela|Jones]]
 * [[Luna, Isabela|Luna]]
-* [[Maconacon, Isabela|Maconacon]]
+* [[Maconacon]]
 * [[Mallig, Isabela|Mallig]]
 * [[Naguilian, Isabela|Naguilian]]
 * [[Palanan, Isabela|Palanan]]
