--- a/Template:Isabela.mw
+++ b/Template:Isabela.mw
@@ -38,7 +38,7 @@
 * [[San Pablo, Isabela|San Pablo]]
 * [[Santa Maria, Isabela|Santa Maria]]
 * [[Santo Tomas, Isabela|Santo Tomas]]
-* [[Tumauini, Isabela|Tumauini]]
+* [[Tumauini]]
 |group2 = Saray siyudad
 |list2 = 
 * [[Cauayan]]
