--- a/Balbalan.mw
+++ b/Balbalan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_kalinga_balbalan.png|right|Mapa na Kalinga ya nanengneng so location na Balbalan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Balbalan, Kalinga
 | 1990 = 10147		
@@ -31,6 +32,9 @@ Say Balbalan walay 14 ya [[barangay]].
 * Poblacion (Salegseg)
 * Talalang
 * Tawang
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
