--- a/Pasil.mw
+++ b/Pasil.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_kalinga_pasil.png|right|Mapa na Kalinga ya nanengneng so location na Pasil]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pasil, Kalinga
 | 1990 = 7572		
@@ -31,6 +32,9 @@ Say Pasil walay 14 ya [[barangay]].
 * Pugong
 * Balenciagao Sur
 * Bagtayan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
