--- a/Pinukpuk.mw
+++ b/Pinukpuk.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_kalinga_pinukpuk.png|right|Mapa na Kalinga ya nanengneng so location na Pinukpuk]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pinukpuk, Kalinga
 | 1990 = 20102		
@@ -44,6 +45,9 @@ Say Pinukpuk walay 23 ya [[barangay]].
 * Pinococ
 * Taggay
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
