--- a/Rizal,_Kalinga.mw
+++ b/Rizal,_Kalinga.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_kalinga_rizal.png|right|Mapa na Kalinga ya nanengneng so location na Rizal]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Rizal, Kalinga
 | 1990 = 10885		
@@ -31,6 +32,9 @@ Say Rizal walay 14 ya [[barangay]].
 * Romualdez
 * San Francisco
 * San Pedro
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
