--- a/Tanudan.mw
+++ b/Tanudan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_kalinga_tanudan.png|right|Mapa na Kalinga ya nanengneng so location na Tanudan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tanudan, Kalinga
 | 1990 = 9323		
@@ -37,6 +38,9 @@ Say Tanudan walay 16 ya [[barangay]].
 * Lay-asan
 * Mangali Centro
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
