--- a/Tinglayan.mw
+++ b/Tinglayan.mw
@@ -1,4 +1,5 @@
-[[Image:Ph_locator_kalinga_tinglayan.png|right|Mapa na Kalinga ya nanengneng so location na Tinglayan]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Tinglayan, Kalinga
 | 1990 = 12637		
@@ -41,6 +42,9 @@ Say Tinglayan walay 20 ya [[barangay]].
 * Old Tinglayan
 * Lower Bangad
 </td></tr></table>
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray nipaway ya kawing==
 
