--- a/Template:Camarines_Sur.mw
+++ b/Template:Camarines_Sur.mw
@@ -12,7 +12,7 @@
 * [[Buhi, Camarines Sur|Buhi]]
 * [[Bula, Camarines Sur|Bula]]
 * [[Cabusao, Camarines Sur|Cabusao]]
-* [[Calabanga, Camarines Sur|Calabanga]]
+* [[Calabanga]]
 * [[Camaligan, Camarines Sur|Camaligan]]
 * [[Canaman, Camarines Sur|Canaman]]
 * [[Caramoan, Camarines Sur|Caramoan]]
