--- a/Alaminos,_Laguna.mw
+++ b/Alaminos,_Laguna.mw
@@ -13,7 +13,7 @@
 | 2030 = 		
 |}}
 
-Say '''Alaminos''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]]. Nagsasakupan diad baley ran bangonan ken Braganza nen Oktubre 16, [[2011]] so [[Alaminos|Siyudad na Alaminos]], [[Pangasinan]]
+Say '''Alaminos''' sakey baley diad [[Filipinas|Pilipino]] ed [[Laguna]]. Nagsasakupan diad baley ran bangonan ken Braganza nen Oktubre 16, [[2011]] so [[Alaminos|Siyudad na Alaminos]], [[Pangasinan]].
 
 == Listaan na barangay ==
 
