--- a/Template:Laguna.mw
+++ b/Template:Laguna.mw
@@ -8,7 +8,7 @@
 |list1 = 
 * [[Alaminos, Laguna|Alaminos]]
 * [[Bay, Laguna|Bay]]
-* [[Calauan, Laguna|Calauan]]
+* [[Calauan]]
 * [[Cavinti, Laguna|Cavinti]]
 * [[Famy, Laguna|Famy]]
 * [[Kalayaan, Laguna|Kalayaan]]
