--- a/Template:Laguna.mw
+++ b/Template:Laguna.mw
@@ -9,8 +9,8 @@
 * [[Alaminos, Laguna|Alaminos]]
 * [[Bay, Laguna|Bay]]
 * [[Calauan]]
-* [[Cavinti, Laguna|Cavinti]]
-* [[Famy, Laguna|Famy]]
+* [[Cavinti]]
+* [[Famy]]
 * [[Kalayaan, Laguna|Kalayaan]]
 * [[Liliw, Laguna|Liliw]]
 * [[Los Baños, Laguna|Los Baños]]
