--- a/Cavinti.mw
+++ b/Cavinti.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na Cavinti<br>''Bayan ng Kabinti''<br>''Iliako Kavinti''<br>''Balen ning Cavniti'' |
- sealfile     = |
- locatormapfile = Ph_locator_laguna_cavinti.png |
- caption      = Map of [[Laguna]] showing the location of Cavinti. |
- region       = [[CALABARZON]] (Region IV-A) |
- province     = [[Laguna (luyag)]] |
- districts    = 4th district of Laguna |
- barangays    = 19 |
- class        = 3rd class |
- mayor        = Cel Esguerra |
- founded      = [[1993]] |
- cityhood     = -|
- areakm2      = 125.54 |
- pop2000      = 20,809 |
- popden2000   = 170 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Cavinti, Laguna
 | 1990 = 15131		
@@ -30,12 +12,11 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Luisiana''' ([[salitan Basko|Basko]]: ''Iliako Kavinti''; [[salitan Kapampangan|Pampango]]: ''Balen ning Cavniti''), sakey [[baley]] diad [[Filipinas|Pilipino]] ed [[luyag]] na [[Laguna]].
+Say '''Luisiana''' sakey [[baley]] diad [[Filipinas|Pilipino]] ed [[luyag]] na [[Laguna]].
 
 == Listaan na Barangay ==
 
 Say Cavinti walay 19 ya [[barangay]]:
-[[image:Ausflug Falls 1992 Manila.jpg|right|thumb|300px|Ti Dissuor ti Pagsanjan ket mabirukan ti kaunegan ti Cavinti]]
 
 <table border=0><tr>
 <td valign=top>
@@ -61,8 +42,10 @@ Say Cavinti walay 19 ya [[barangay]]:
 * Udia
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
-{{philippines-geo-stub}}
 {{Laguna}}
+{{philippines-geo-stub}}
 
 [[Category:Saray baley na Laguna]]
